--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,17 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
 
   <body>
-    <%= yield %>
+    <%# SHOW IF THERE'S SOME PROBLEM VALIDATING AND SHOW IT TO USER %>
+    <p id="notice"><%= notice %></p>
+
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
